I added h2 tag according to the lms description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Hello HTML!</h1>
-
+    <h2>I started this task.</h2>
     <script>
         console.log('test')
     </script>
